# pywowlib

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  __init__.py  adt_file.py  build.py  cmake.py  m2_file.py  requirements.txt  test.py  wmo_file.py
archives/: test.py  wow_filesystem.py
archives/casc/: CASC.cp35-win_amd64.pyd  CMakeLists.txt  README.md  Untitled-2  casc.cpp  casc.pyx  setup.py
archives/casc/native/: BinaryReader.cpp  BinaryReader.h  BlteHandler.cpp  BlteHandler.h  DataStream.cpp  DataStream.h  EncodingFileParser.cpp  EncodingFileParser.h  Jenkins96.cpp  Jenkins96.h  KeyValueConfig.cpp  KeyValueConfig.h  LocalCascHandler.cpp  LocalCascHandler.h  RootFileParser.cpp  RootFileParser.h  String.cpp  String.h  Structures.cpp  Structures.h  TokenConfig.cpp  TokenConfig.h
archives/casc/src/: setup.py
archives/mpq/: .gitignore  .travis.yml  MANIFEST.in  README.md  __init__.py  setup.cfg  setup.py  tox.ini
archives/mpq/native/: libStorm.dylib  python_wrapper.hpp  setup.py  storm.cp35-win_amd64.pyd  storm.cp37-win_amd64.pyd  stormmodule.cc  stormmodule.h
archives/mpq/native/stormlib/: StormLib.lib  storm.lib
archives/mpq/storm/: __init__.py  libStorm.dylib  setup.py  storm.pyd
archives/mpq/storm/native/: stormmodule.cc
blp/: BLP2PNG.pyd  __init__.py  blp.cpp  blp.pyx  setup.py  test.py
blp/BLP2PNG/: BLP2PNG.cp35-win_amd64.pyd  BLP2PNG.cp37-win_amd64.pyd  BLP2PNG.cp39-win_amd64.pyd  blp.html  blp.pyx  setup.py
blp/PNG2BLP/: PNG2BLP.cp35-win_amd64.pyd  PNG2BLP.cp37-win_amd64.pyd  PNG2BLP.cp39-win_amd64.pyd  png2blp.cpp  (+1 more)
enums/: adt_enums.py  animation_data.csv  m2_enums.py
file_formats/: adt_chunks.py  anim_format.py  m2_chunks.py  m2_format.py  phys_format.py  skel_format.py  skin_format.py  tex_format.py  wmo_format_group.py  wmo_format_root.py  wow_common_types.py
io_utils/: array.py  class_namespace_hook.py  conditional.py  ctypes.py  exceptions.py  metaclass_hook.py  struct.py  struct_protocol.py  types.py  var_type.py  var_type_protocol.py
wdbx/: dbd_parser.py  dbd_wrapper.py  types.py  wdbc.py  wdc1.py
(+38 files in other folders)
