[metadata]
name = mpq
version = 1.1.1
description = Python bindings for StormLib
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/python-mpq/
download_url = https://github.com/HearthSim/python-mpq/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment
	Topic :: System :: Archiving

[options]
packages =
	mpq
include_package_data = True
